--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
 
 env:
-  TERRAFORM_VERSION: 0.14.4
+  TERRAFORM_VERSION: 1.0.9
 
 jobs:
   terraform:
@@ -21,3 +21,9 @@ jobs:
 
     - name: terraform fmt
       run: terraform fmt -check
+
+    - name: terraform init
+      run: terraform init
+
+    - name: terraform validate
+      run: terraform validate
